deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-deployment
  namespace: stock
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: hermes
  template:
    metadata:
      annotations:
        git-tag: "v13"
      labels:
        app: hermes
    spec:
      containers:
        - name: hermes-container
          image: artifacts.tekuro.io/hermes:latest
          volumeMounts:
            - name: tls-volume
              mountPath: /app/ssl
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: hermes-tls
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
