deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-service
  namespace: stock
spec:
  selector:
    app: hermes 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
