deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-ingress
  namespace: stock
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hermes.tekuro.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hermes-service
            port:
              number: 8080
